k8s/services/prod/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-nginx
  namespace: vpn-prod
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - ui.botoutline.ru
      secretName: ingress-tls
  rules:
    - host: ui.botoutline.ru
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 8000
          - path: /static/
            pathType: Prefix
            backend:
              service:
                name: static
                port:
                  number: 80
